--- a/static/css/game_menu.css
+++ b/static/css/game_menu.css
@@ -1,4 +1,8 @@
 body {
+  margin: 0;
+}
+
+#game-menu-container {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -25,6 +29,11 @@ body {
   color: white;
   border: none;
   cursor: pointer;
+}
+
+#gameMenu button:hover,
+button:hover {
+  background-color: #1b4aa1;
 }
 
 #popup {
@@ -88,4 +97,28 @@ body {
   width: 100%;
   height: 100%;
   z-index: -1;
+  flex: 0 0 80%;
+  overflow: hidden;
+}
+
+#game-ui {
+  display: none;
+  position: absolute;
+  flex: 1 1 20%;
+}
+
+button {
+  padding: 10px 30px;
+  font-size: 25px;
+  border-radius: 5px;
+  background-color: #80a5ea; /* Light blue */
+  color: white;
+  border: none;
+  cursor: pointer;
+}
+
+#map-game-ui-container {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
 }
